2009-06-04  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* Mono.Addins.Setup.csproj: Remove unnecessary Mono.Posix
	  reference.

2009-05-28  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Addins.Setup.csproj: Properly sign assemblies.

2009-02-06  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Addins.Setup/SetupTool.cs: Added command for getting
	  the list of assemblies of an add-in.

2009/02/06  Lluis Sanchez Gual  <lluis@novell.com>

 * Mono.Addins.Setup.csproj: Updated.

2008-11-10  Lluis Sanchez Gual  <lluis@novell.com>

	* mono-addins-setup.pc.in: Respect custom libdir during ./configure.
	Fixes bug #443205. Patch by Diego Pettenò.

2008-11-10  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am: Fix building with parallel make jobs (-j8). Fixes bug
	#443206. Patch by Diego Pettenò.

2008-08-22  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.Setup.csproj, Mono.Addins.Setup.mdp: Use msbuild file
	  format for projects. Removed the old MD1 projects.

2008-07-15  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.Setup/SetupTool.cs: Add missing parameter documentation.

2008-06-11  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.Setup.mdp: Updated.
	* Mono.Addins.Setup/SetupTool.cs: Don't allow uninstalling add-ins with
	  the CantUninstall flag. Same for hidden flag.

2008-02-06  Lluis Sanchez Gual <lluis@novell.com> 

	* AssemblyInfo.cs: Added support for pluggable add-in assembly reflectors.
	  Implemented an add-in assembly reflector based on Cecil.

2008-01-18  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.Setup/RepositoryRegistry.cs: Don't break the api.

2008-01-17  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.Setup/AddinPackage.cs: Delete subdirectories when
	  uninstalling.
	* Mono.Addins.Setup/AddinStore.cs: Use a more informative uninstall message.
	* Mono.Addins.Setup/RepositoryRegistry.cs: Fix a nullref. Improved error
	  reporting.

2007-12-15  Lluis Sanchez Gual <lluis@novell.com> 
