@@ -1,3 +1,11 @@
+2009-06-17  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* Mono.Addins.Setup/SetupService.cs: Added method for getting
+	  a registry from a package name.
+
+	* Mono.Addins.Setup/SetupTool.cs: Added some more help for the
+	  info command.
+
 2009-06-04  Lluis Sanchez Gual  <lluis@novell.com>
 
 	* Makefile.am:
